--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
-    "paraplan-react": "file:.."
+    "paraplan-react": "file:..",
+    "dns": "file:./src/mock/dns"
   },
   "scripts": {
     "start": "react-scripts start",
