--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "react-draggable": "^4.4.3",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
