--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paraplan-react",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Library for ParaPlan API",
   "author": "timhibbard",
   "license": "MIT",
@@ -24,23 +24,16 @@
   "peerDependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "prop-types": "^15.5.4",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-draggable": "^4.4.3",
-    "react-google-maps": "^9.4.5",
-    "recompose": "^0.17.0"
+    "prop-types": "^15.5.4"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.4",
-    "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.22.1",
@@ -75,6 +68,8 @@
     ]
   },
   "dependencies": {
-    "moment": "^2.29.1"
+    "react": "17.x",
+    "react-dom": "17.x",
+    "react-draggable": "^4.4.3"
   }
 }
